[package]
name = "mcp-server-as-http-core"
version = "0.1.0"
edition = "2021"
description = "Core HTTP server for MCP (Model Context Protocol) servers"
license = "MIT"
repository = "https://github.com/yonaka15/mcp-server-as-http-core"

[dependencies]
axum = "0.8.4"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.45.1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "1.0"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
